--- a/reportDocumentClass.tex
+++ b/reportDocumentClass.tex
@@ -381,11 +381,11 @@ The model parameters are usually estimated using a pseudo-likelihood estimation 
 As in the case of our longitudinal study of dynamic networks, we need to use an extension of ERGMs, namely, Separable Temporal Exponential Family Random Graph Models (STERGM), which takes two models, one for the formation, and another for dissolution \cite{Krivitsky}.
 
 
-\begin{table*} [!Ht]
+\begin{table*}
 \centering
 \caption{Summary of expectations for the statistical model covariates, and sentiment analysis for each forking category. An expected ``no significant change'' is denoted by a dash ($-$) line.}
 \label{tabelSummaryExpectationModelParameters}       
-\begin{tabular}{m{0.4\columnwidth} m{0.35\columnwidth} m{0.4\columnwidth} m{0.35\columnwidth} m{0.3\columnwidth}}
+\begin{tabular}{m{0.4\columnwidth} m{0.15\columnwidth} m{0.15\columnwidth} m{0.15\columnwidth} m{0.15\columnwidth}}
 \hline\noalign{\smallskip}
 \textbf{Model parameter} & \textbf{U.F. Pers. Dif.} & \textbf{U.F. More Comm.} & \textbf{H.F. Tech. Dif.} & \textbf{No.F.}\\
 \noalign{\smallskip}\hline\noalign{\smallskip}
@@ -398,9 +398,9 @@ Transitive ties & - & - & - & - \\ \hline
 Betweenness & increase & - & increase & - \\ \hline
 Clustering Coefficient & - & - & - & - \\ \hline
 Preferential Attachment & - & - & - & - \\ \hline
-Assortativity & - & increase & - & - \\ \hline
-CUSUM betweenness & sharp increase & - & increase & - \\ \hline
-Sentiment Analysis & increase in negativity & - & - & - \\
+Assortativity & - & increase & - & - \\
+%CUSUM betweenness & sharp increase & - & increase & - \\ \hline
+%Sentiment Analysis & increase in negativity & - & - & - \\
 \noalign{\smallskip}\hline
 \end{tabular}
 \end{table*}
