--- a/referenc.tex
+++ b/referenc.tex
@@ -62,6 +62,8 @@
 
 \bibitem{Chakrabarti} Chakrabarti,  D., and C. Faloutsos. ``\textit{Graph mining: Laws, generators, and algorithms,}'' ACM Computing Surveys, 38, 1, Article 2, 2006.
 
+\bibitem{Coleman1964} Coleman, J.S. ``\textit{Introduction to Mathematical Sociology,}'' New York etc.: The Free Press of Glencoe. 1964.
+
 \bibitem{CrowstonFLOSSWhatWeKnow} 
 Crowston, K., K. Wei, J. Howison, and A. Wiggins. ``\textit{Free/Libre open-source software development: What we know and what we do not know,}'' ACM Computing Surveys, 44, 2, Article 7, 2012.
 
@@ -124,6 +126,10 @@ Crowston, K., K. Wei, J. Howison, and A. Wiggins. ``\textit{Free/Libre open-sour
 \bibitem{Singer} Singer, L., F. Figueira Filho, B. Cleary, C. Treude, M. Storey, and K. Schneider. ``\textit{Mutual assessment in the social programmer ecosystem: an empirical investigation of developer profile aggregators,}'' Proc. Conf. Computer supported cooperative work, ACM, 2013.
 
 \bibitem{SnijdersMCMCMLE} Snijders, T. AB. ``\textit{Markov chain Monte Carlo estimation of exponential random graph models,}'' Journal of Social Structure 3, no. 2: 1-40. 2002.
+
+\bibitem{Snijders2004} Snijders, Tom AB. ``\textit{Models for longitudinal network data,}'' Models and methods in social network analysis 1 (2005): 215-247. 
+
+\bibitem{Snijders2010} Snijders, Tom AB., GG Van de Bunt, CEG Steglich, ``\textit{Introduction to stochastic actor-based models for network dynamics,}'' Social networks 32 (1), 44-60. 2010.
 
 \bibitem{Sowe} Sowe, S., L. Stamelos, and L. Angelis, ``\textit{Identifying knowledge brokers that yield software engineering knowledge in OSS projects,}'' Information and Software Technology, vol. 48, pp. 1025-1033, Nov 2006. 
 
