--- a/reportDocumentClass.tex
+++ b/reportDocumentClass.tex
@@ -449,8 +449,12 @@ p_{ij}(x) = \frac{exp(f_i(i \mapsto j) + g_i(x, j) - f_i(x))}{\sum_{h=1, h \neq 
 \item Now change $t$ to $t + \Delta t$ and change $x_{ij}$ to $(1 - x_{ij})$
 \end{enumerate}
 
+\subsection{Model Specification}
+xxx
 
-
+\subsubsection{Covariates}
+xxx 
+list
 
 
 \pagebreak
